fix the css on mobile

--- a/_sass/minima-reboot/_layout.scss
+++ b/_sass/minima-reboot/_layout.scss
@@ -49,7 +49,7 @@ body {
 
   @media (max-width: $layout-responsive-nav-cutoff - 1) {
 
-    content:url("/assets/logo_long.svg");
+    content:url("assets/logo_long.svg");
   }
 }
 
